<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/toolbar_header">
    </GridLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/edit_user_information"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <EditText
                android:id="@+id/userInfoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:ems="10"
                android:enabled="true"
                android:inputType="textEmailAddress"
                android:paddingTop="120dp"
                android:singleLine="true"
                android:hint="@string/email"
                tools:ignore="LabelFor" />


            <EditText
                android:id="@+id/userInfoDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:ems="10"
                android:enabled="true"
                android:inputType="text"
                android:singleLine="true"
                android:hint="@string/dob"
                android:layout_marginTop="5dp"
                tools:ignore="LabelFor,TextFields" />


            <EditText
                android:id="@+id/userInfoUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:ems="10"
                android:enabled="true"
                android:inputType="text"
                android:singleLine="true"
                android:layout_marginTop="5dp"
                android:hint="@string/username1"
                tools:ignore="LabelFor,TextFields" />

            <EditText
                android:id="@+id/userInfoPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:ems="10"
                android:enabled="true"
                android:inputType="textPassword"
                android:layout_marginTop="5dp"
                android:singleLine="true"
                android:hint="@string/password1"
                tools:ignore="LabelFor,TextFields" />

            <EditText
                android:id="@+id/userInfoRole"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="true"
                android:ems="10"
                android:enabled="true"
                android:inputType="text"
                android:singleLine="true"
                android:hint="@string/user_role"
                android:layout_marginTop="5dp"
                tools:ignore="LabelFor,TextFields" />

            <Button
                android:id="@+id/userInfoUpdateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/save"
                android:layout_gravity="center"
                android:background="@drawable/border1"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="#FFFCFC"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="#EEFF8C00"/>


            <Button
                android:id="@+id/userInfoDeleteBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="#FFFDFD"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:background="@drawable/border1"
                app:backgroundTint="#E32323"/>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
