<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/toolbar_header">
    </GridLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="-154dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/user"
                    app:civ_border_color="#FF9800"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/editprofile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/img"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="Edit Profile"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RelativeLayout>

            <EditText
                android:id="@+id/userInfoEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="true"
                android:ems="10"
                android:enabled="true"
                android:inputType="textEmailAddress"
                android:paddingTop="40dp"
                android:singleLine="true"
                android:hint="@string/email"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/userInfoUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="true"
                android:ems="10"
                android:enabled="true"
                android:inputType="text"
                android:singleLine="true"
                android:hint="@string/username1"
                tools:ignore="LabelFor,TextFields" />

            <EditText
                android:id="@+id/userInfoPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="true"
                android:ems="10"
                android:enabled="true"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/password1"
                tools:ignore="LabelFor,TextFields" />

            <EditText
                android:id="@+id/userInfoDOB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autofillHints="true"
                android:ems="10"
                android:enabled="true"
                android:inputType="date"
                android:singleLine="true"
                android:hint="@string/dob"
                tools:ignore="LabelFor,TextFields" />

            <Button
                android:id="@+id/userInfoUpdateBtn"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/border1"
                android:padding="10dp"
                android:text="@string/save"
                android:textColor="#FFFCFC"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="#EEFF8C00" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
